--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
-		"dev": "npx nodemon index.js",
-		"test": "node --test"
+		"start": "cross-env NODE_ENV=production node index.js",
+		"dev": "cross-env NODE_ENV=development npx nodemon index.js",
+		"test": "cross-env NODE_ENV=test node --test"
 	},
 	"keywords": [],
 	"author": "",
@@ -16,5 +16,8 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"mongoose": "^8.3.2"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.3"
 	}
 }
