--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"mongoose": "^8.3.2"
 	},
 	"devDependencies": {
-		"cross-env": "^7.0.3"
+		"cross-env": "^7.0.3",
+		"supertest": "^6.3.4"
 	}
 }
